# OpticalQuad

./: AUTHORS  Makefile.am  configure.ac
range_plugin/: gstrangeplugin.c
src/: Makefile.am  gstOpticalProcessor.cc  gstopticalquad.c  gstopticalquad.cpp  gstopticalquad.h
src/opticaFlow_plugin/: Makefile.am  gstOpticalProcessor.cc
src/opticaFlow_plugin/.deps/: libgstOpticalQuad_la-gstOpticalProcessor.Plo  libgstOpticalQuad_la-gstopticalquad.Plo
src/range_plugin/: Makefile.am  gstrangeplugin.h
